z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -421,7 +421,7 @@ h2 {
   height: 100px; }
 
 .mapbox {
-  z-index: 3;
+  z-index: 2;
   margin-top: -4px; }
 
 .centered-container {
