--- a/scss/_events.scss
+++ b/scss/_events.scss
@@ -103,6 +103,6 @@
 }
 
 .mapbox {
-  z-index: 3;
+  z-index: 2;
   margin-top: -4px;
 }
